<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@color/dark_purple"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|top">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@+id/sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_sub_name"
            android:textColor="@color/soft_light_purple"
            android:layout_below="@+id/logo_image"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_label"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_below="@id/sub_name"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="225dp">
        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_label"
            android:textSize="18sp"
            android:gravity="fill_vertical"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="275dp">
        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_label"
            android:textSize="18sp"
            android:gravity="fill_vertical"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/register_btn_text"
        android:layout_marginBottom="85dp"
        android:textSize="28sp"
        android:textAllCaps="false"
        android:paddingHorizontal="26dp"
        android:backgroundTint="@color/soft_light_purple"
        android:textColor="@color/soft_brown"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have"
            android:textSize="16sp"
            android:textColor="@color/salmon"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textSize="16sp"
            android:textColor="@color/soft_sky_blue"
            android:textStyle="bold|italic"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>